--- a/src/assets/css/_media.scss
+++ b/src/assets/css/_media.scss
@@ -400,6 +400,11 @@
             }
         } 
     } 
+    .project {
+        .maker-name {
+            margin-top: 5px;
+        }
+    }
 }
 
 @media only screen and (min-width: 1200px) {}
