--- a/src/assets/css/_profile.scss
+++ b/src/assets/css/_profile.scss
@@ -743,7 +743,7 @@
     .maker-name {
         color: $blue;
         margin-bottom: 0;
-        margin-top: 13px;
+        margin-top: 10px;
     }
     .image-top {
         height: 275px;
@@ -779,16 +779,15 @@
             width: 90%;
         }
         .profiel-pic-container {
-            width: 80px;
-            height: 80px;
-            .title-name {
-                width: 80%;
-            }
+            width: 82px;
+            height: 82px;
+            
             img {
                 width: 100%;
             }
         }
-        .maker-data-container {
+        .maker-data-container,
+        .title-name {
             width: 230px;
         }
     }
@@ -824,13 +823,12 @@
     .card-title {
         @include card-header-font-sm;
         color: $text-color-1;
-        height: 44px;
+        height: 50px;
         padding: 0px;
         display: -webkit-box;
         -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
         overflow: hidden;
-        line-height: 23px !important;
         text-align: left;
         width: 100%;
         margin: 0;
@@ -844,7 +842,6 @@
         -webkit-line-clamp: 1;
         -webkit-box-orient: vertical;
         overflow: hidden;
-        line-height: 23px !important;
         text-align: left;
         width: 100%;
         margin: 0;
@@ -1054,7 +1051,7 @@
     background-color: $blue;
     opacity: 0.6;
     display: none;
-    z-index: 10;
+    z-index: 9;
 }
 .overlay-portfolio {
     width: 100%;
